--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.10.5",
+    "@clerk/clerk-react": "^5.23.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
